--- a/Bracez/ui/editor/EditorWindow.xib
+++ b/Bracez/ui/editor/EditorWindow.xib
@@ -659,7 +659,7 @@
                                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                                 <clipView key="contentView" drawsBackground="NO" id="s0D-Sl-40F">
                                                                                     <rect key="frame" x="0.0" y="0.0" width="261" height="178"/>
-                                                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                                                    <autoresizingMask key="autoresizingMask"/>
                                                                                     <subviews>
                                                                                         <textView focusRingType="none" editable="NO" importsGraphics="NO" richText="NO" verticallyResizable="YES" spellingCorrection="YES" smartInsertDelete="YES" id="Gqx-B7-p6B">
                                                                                             <rect key="frame" x="0.0" y="0.0" width="261" height="178"/>
@@ -707,26 +707,26 @@
                                                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                                     <subviews>
                                                                                         <box boxType="custom" borderType="none" borderWidth="0.0" titlePosition="noTitle" translatesAutoresizingMaskIntoConstraints="NO" id="QfS-bc-n5q">
-                                                                                            <rect key="frame" x="0.0" y="49" width="158" height="30"/>
+                                                                                            <rect key="frame" x="0.0" y="49" width="94" height="30"/>
                                                                                             <view key="contentView" id="R7Z-nc-be7">
-                                                                                                <rect key="frame" x="0.0" y="0.0" width="158" height="30"/>
+                                                                                                <rect key="frame" x="0.0" y="0.0" width="94" height="30"/>
                                                                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                                                 <subviews>
-                                                                                                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="3OV-U1-3tU">
-                                                                                                        <rect key="frame" x="112" y="7" width="46" height="16"/>
-                                                                                                        <buttonCell key="cell" type="check" title="Auto" bezelStyle="regularSquare" imagePosition="left" controlSize="small" state="on" inset="2" id="1sK-gE-VEA">
+                                                                                                    <button toolTip="Automatically referesh results" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="3OV-U1-3tU">
+                                                                                                        <rect key="frame" x="77" y="8.5" width="17" height="14"/>
+                                                                                                        <buttonCell key="cell" type="square" title="Auto" bezelStyle="shadowlessSquare" image="repeat" catalog="system" imagePosition="only" state="on" inset="2" id="1sK-gE-VEA">
                                                                                                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
-                                                                                                            <font key="font" metaFont="smallSystem"/>
+                                                                                                            <font key="font" metaFont="system"/>
                                                                                                         </buttonCell>
                                                                                                         <connections>
                                                                                                             <binding destination="J9G-cz-Plk" name="value" keyPath="continuousSearch" id="mai-Mo-rV2"/>
                                                                                                         </connections>
                                                                                                     </button>
-                                                                                                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="83O-HT-81K">
-                                                                                                        <rect key="frame" x="49" y="7" width="52" height="16"/>
-                                                                                                        <buttonCell key="cell" type="check" title="Fuzzy" bezelStyle="regularSquare" imagePosition="left" controlSize="small" state="on" inset="2" id="x2T-KE-Ml5">
+                                                                                                    <button toolTip="Use fuzzy search" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="83O-HT-81K">
+                                                                                                        <rect key="frame" x="50" y="8" width="15" height="15"/>
+                                                                                                        <buttonCell key="cell" type="square" title="Fuzzy" bezelStyle="shadowlessSquare" image="asterisk.circle" catalog="system" imagePosition="only" state="on" inset="2" id="x2T-KE-Ml5">
                                                                                                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
-                                                                                                            <font key="font" metaFont="smallSystem"/>
+                                                                                                            <font key="font" metaFont="system"/>
                                                                                                         </buttonCell>
                                                                                                         <connections>
                                                                                                             <binding destination="J9G-cz-Plk" name="value" keyPath="fuzzySearch" id="rUQ-3R-FfW"/>
@@ -1342,6 +1342,7 @@
         <image name="NSRevealFreestandingTemplate" width="15" height="15"/>
         <image name="NSStopProgressTemplate" width="14" height="13"/>
         <image name="ToolbarBookmarksTemplate" width="16" height="16"/>
+        <image name="asterisk.circle" catalog="system" width="15" height="15"/>
         <image name="exclamationmark.triangle" catalog="system" width="17" height="15"/>
         <image name="gearshape" catalog="system" width="16" height="16"/>
         <image name="list.bullet.indent" catalog="system" width="19" height="12"/>
@@ -1349,6 +1350,7 @@
         <image name="menubar.arrow.down.rectangle" catalog="system" width="18" height="14"/>
         <image name="rectangle.bottomthird.inset.fill" catalog="system" width="18" height="14"/>
         <image name="rectangle.split.1x2" catalog="system" width="18" height="14"/>
+        <image name="repeat" catalog="system" width="17" height="14"/>
         <image name="sidebar.left" catalog="system" width="15" height="12"/>
         <image name="sidebar.right" catalog="system" width="23" height="17"/>
         <image name="square.and.pencil" catalog="system" width="17" height="15"/>
