--- a/Bracez/ui/editor/ProjectionDefinitionEditor.xib
+++ b/Bracez/ui/editor/ProjectionDefinitionEditor.xib
@@ -56,7 +56,7 @@ Gw
                                 <autoresizingMask key="autoresizingMask"/>
                                 <subviews>
                                     <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="cpb-KQ-EYh">
-                                        <rect key="frame" x="117" y="181" width="448" height="21"/>
+                                        <rect key="frame" x="117" y="175" width="448" height="21"/>
                                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" id="V8v-2L-jd9">
                                             <font key="font" usesAppearanceFont="YES"/>
                                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -71,7 +71,7 @@ Gw
                                         </connections>
                                     </textField>
                                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="7FB-6T-toI">
-                                        <rect key="frame" x="166" y="127" width="74" height="16"/>
+                                        <rect key="frame" x="166" y="121" width="74" height="16"/>
                                         <textFieldCell key="cell" lineBreakMode="clipping" title="Field name:" id="6JU-4O-DAy">
                                             <font key="font" metaFont="system"/>
                                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -79,7 +79,7 @@ Gw
                                         </textFieldCell>
                                     </textField>
                                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="cwx-SC-qj2">
-                                        <rect key="frame" x="166" y="96" width="74" height="16"/>
+                                        <rect key="frame" x="166" y="90" width="74" height="16"/>
                                         <textFieldCell key="cell" lineBreakMode="clipping" title="Expression:" id="5C1-yO-4tP">
                                             <font key="font" metaFont="system"/>
                                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -87,7 +87,7 @@ Gw
                                         </textFieldCell>
                                     </textField>
                                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="rXQ-gn-wIP">
-                                        <rect key="frame" x="18" y="183" width="93" height="16"/>
+                                        <rect key="frame" x="18" y="177" width="93" height="16"/>
                                         <textFieldCell key="cell" lineBreakMode="clipping" title="Rows selector:" id="jP2-aE-HfQ">
                                             <font key="font" metaFont="system"/>
                                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -95,7 +95,7 @@ Gw
                                         </textFieldCell>
                                     </textField>
                                     <scrollView autohidesScrollers="YES" horizontalLineScroll="24" horizontalPageScroll="10" verticalLineScroll="24" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cZv-Bj-Mic">
-                                        <rect key="frame" x="20" y="43" width="140" height="100"/>
+                                        <rect key="frame" x="20" y="37" width="140" height="100"/>
                                         <clipView key="contentView" id="U8l-Ze-JYN">
                                             <rect key="frame" x="1" y="1" width="138" height="98"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -164,7 +164,7 @@ Gw
                                         </scroller>
                                     </scrollView>
                                     <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Ae7-kP-k0J">
-                                        <rect key="frame" x="246" y="125" width="319" height="21"/>
+                                        <rect key="frame" x="246" y="119" width="319" height="21"/>
                                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" id="Z6m-Ec-XPR">
                                             <font key="font" usesAppearanceFont="YES"/>
                                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -179,7 +179,7 @@ Gw
                                         </connections>
                                     </textField>
                                     <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="uxG-oc-GLX">
-                                        <rect key="frame" x="246" y="94" width="319" height="21"/>
+                                        <rect key="frame" x="246" y="88" width="319" height="21"/>
                                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" id="K7j-HU-BGT">
                                             <font key="font" usesAppearanceFont="YES"/>
                                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -194,7 +194,7 @@ Gw
                                         </connections>
                                     </textField>
                                     <box boxType="custom" title="Box" translatesAutoresizingMaskIntoConstraints="NO" id="Voj-IW-G1c">
-                                        <rect key="frame" x="20" y="20" width="140" height="24"/>
+                                        <rect key="frame" x="20" y="14" width="140" height="24"/>
                                         <view key="contentView" id="CGK-Gb-tUv">
                                             <rect key="frame" x="1" y="1" width="138" height="22"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -242,7 +242,7 @@ Gw
                                         <color key="fillColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                     </box>
                                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="0YE-34-KFF">
-                                        <rect key="frame" x="18" y="145" width="35" height="14"/>
+                                        <rect key="frame" x="18" y="139" width="35" height="14"/>
                                         <textFieldCell key="cell" controlSize="small" lineBreakMode="clipping" title="Fields" id="ZfU-Kp-lcE">
                                             <font key="font" metaFont="smallSystem"/>
                                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -282,12 +282,12 @@ Gw
                                 <autoresizingMask key="autoresizingMask"/>
                                 <subviews>
                                     <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="24" horizontalPageScroll="10" verticalLineScroll="24" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g1v-EX-Khv">
-                                        <rect key="frame" x="0.0" y="0.0" width="585" height="90"/>
+                                        <rect key="frame" x="0.0" y="-3" width="585" height="90"/>
                                         <clipView key="contentView" id="n88-qU-26B">
                                             <rect key="frame" x="0.0" y="0.0" width="585" height="90"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <subviews>
-                                                <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowHeight="24" rowSizeStyle="automatic" headerView="Guo-IU-qhs" viewBased="YES" id="hTS-T1-I2g">
+                                                <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowHeight="24" rowSizeStyle="automatic" headerView="Guo-IU-qhs" viewBased="YES" id="hTS-T1-I2g">
                                                     <rect key="frame" x="0.0" y="0.0" width="585" height="62"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <size key="intercellSpacing" width="17" height="0.0"/>
