--- a/Bracez/ui/editor/ProjectionDefinitionEditor.xib
+++ b/Bracez/ui/editor/ProjectionDefinitionEditor.xib
@@ -56,7 +56,7 @@ Gw
                                 <autoresizingMask key="autoresizingMask"/>
                                 <subviews>
                                     <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="cpb-KQ-EYh">
-                                        <rect key="frame" x="117" y="175" width="448" height="21"/>
+                                        <rect key="frame" x="117" y="181" width="448" height="21"/>
                                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" id="V8v-2L-jd9">
                                             <font key="font" usesAppearanceFont="YES"/>
                                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -71,7 +71,7 @@ Gw
                                         </connections>
                                     </textField>
                                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="7FB-6T-toI">
-                                        <rect key="frame" x="166" y="121" width="74" height="16"/>
+                                        <rect key="frame" x="166" y="127" width="74" height="16"/>
                                         <textFieldCell key="cell" lineBreakMode="clipping" title="Field name:" id="6JU-4O-DAy">
                                             <font key="font" metaFont="system"/>
                                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -79,7 +79,7 @@ Gw
                                         </textFieldCell>
                                     </textField>
                                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="cwx-SC-qj2">
-                                        <rect key="frame" x="166" y="90" width="74" height="16"/>
+                                        <rect key="frame" x="166" y="96" width="74" height="16"/>
                                         <textFieldCell key="cell" lineBreakMode="clipping" title="Expression:" id="5C1-yO-4tP">
                                             <font key="font" metaFont="system"/>
                                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -87,7 +87,7 @@ Gw
                                         </textFieldCell>
                                     </textField>
                                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="rXQ-gn-wIP">
-                                        <rect key="frame" x="18" y="177" width="93" height="16"/>
+                                        <rect key="frame" x="18" y="183" width="93" height="16"/>
                                         <textFieldCell key="cell" lineBreakMode="clipping" title="Rows selector:" id="jP2-aE-HfQ">
                                             <font key="font" metaFont="system"/>
                                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -95,7 +95,7 @@ Gw
                                         </textFieldCell>
                                     </textField>
                                     <scrollView autohidesScrollers="YES" horizontalLineScroll="24" horizontalPageScroll="10" verticalLineScroll="24" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cZv-Bj-Mic">
-                                        <rect key="frame" x="20" y="37" width="140" height="100"/>
+                                        <rect key="frame" x="20" y="43" width="140" height="100"/>
                                         <clipView key="contentView" id="U8l-Ze-JYN">
                                             <rect key="frame" x="1" y="1" width="138" height="98"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -164,7 +164,7 @@ Gw
                                         </scroller>
                                     </scrollView>
                                     <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Ae7-kP-k0J">
-                                        <rect key="frame" x="246" y="119" width="319" height="21"/>
+                                        <rect key="frame" x="246" y="125" width="319" height="21"/>
                                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" id="Z6m-Ec-XPR">
                                             <font key="font" usesAppearanceFont="YES"/>
                                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -179,7 +179,7 @@ Gw
                                         </connections>
                                     </textField>
                                     <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="uxG-oc-GLX">
-                                        <rect key="frame" x="246" y="88" width="319" height="21"/>
+                                        <rect key="frame" x="246" y="94" width="319" height="21"/>
                                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" id="K7j-HU-BGT">
                                             <font key="font" usesAppearanceFont="YES"/>
                                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -194,7 +194,7 @@ Gw
                                         </connections>
                                     </textField>
                                     <box boxType="custom" title="Box" translatesAutoresizingMaskIntoConstraints="NO" id="Voj-IW-G1c">
-                                        <rect key="frame" x="20" y="14" width="140" height="24"/>
+                                        <rect key="frame" x="20" y="20" width="140" height="24"/>
                                         <view key="contentView" id="CGK-Gb-tUv">
                                             <rect key="frame" x="1" y="1" width="138" height="22"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -227,11 +227,26 @@ Gw
                                                         </binding>
                                                     </connections>
                                                 </button>
+                                                <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="uav-ug-Fy8">
+                                                    <rect key="frame" x="115" y="1.5" width="15" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="13" id="1mc-OL-aDk"/>
+                                                    </constraints>
+                                                    <buttonCell key="cell" type="smallSquare" bezelStyle="smallSquare" image="sparkles" catalog="system" imagePosition="overlaps" alignment="center" lineBreakMode="truncatingTail" state="on" imageScaling="proportionallyDown" inset="2" id="UlF-QC-KIv">
+                                                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                                        <font key="font" metaFont="system"/>
+                                                    </buttonCell>
+                                                    <connections>
+                                                        <action selector="suggestFields:" target="-2" id="Y91-ZD-YNk"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="2Br-yj-pXJ" firstAttribute="centerY" secondItem="CGK-Gb-tUv" secondAttribute="centerY" id="ABH-0I-df8"/>
+                                                <constraint firstAttribute="trailing" secondItem="uav-ug-Fy8" secondAttribute="trailing" constant="8" id="Czu-VF-tWk"/>
                                                 <constraint firstItem="UhY-TU-C1r" firstAttribute="centerY" secondItem="CGK-Gb-tUv" secondAttribute="centerY" id="GGb-eF-Dkz"/>
                                                 <constraint firstItem="2Br-yj-pXJ" firstAttribute="leading" secondItem="CGK-Gb-tUv" secondAttribute="leading" constant="8" id="Rnq-wA-X66"/>
+                                                <constraint firstItem="uav-ug-Fy8" firstAttribute="centerY" secondItem="CGK-Gb-tUv" secondAttribute="centerY" id="qYS-IV-PCk"/>
                                                 <constraint firstItem="UhY-TU-C1r" firstAttribute="leading" secondItem="2Br-yj-pXJ" secondAttribute="trailing" constant="8" id="z14-cq-Mfa"/>
                                             </constraints>
                                         </view>
@@ -242,7 +257,7 @@ Gw
                                         <color key="fillColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                     </box>
                                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="0YE-34-KFF">
-                                        <rect key="frame" x="18" y="139" width="35" height="14"/>
+                                        <rect key="frame" x="18" y="145" width="35" height="14"/>
                                         <textFieldCell key="cell" controlSize="small" lineBreakMode="clipping" title="Fields" id="ZfU-Kp-lcE">
                                             <font key="font" metaFont="smallSystem"/>
                                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -282,7 +297,7 @@ Gw
                                 <autoresizingMask key="autoresizingMask"/>
                                 <subviews>
                                     <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="24" horizontalPageScroll="10" verticalLineScroll="24" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g1v-EX-Khv">
-                                        <rect key="frame" x="0.0" y="-3" width="585" height="90"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="585" height="90"/>
                                         <clipView key="contentView" id="n88-qU-26B">
                                             <rect key="frame" x="0.0" y="0.0" width="585" height="90"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -437,5 +452,6 @@ Gw
     <resources>
         <image name="NSAddTemplate" width="14" height="13"/>
         <image name="NSRemoveTemplate" width="14" height="4"/>
+        <image name="sparkles" catalog="system" width="15" height="17"/>
     </resources>
 </document>
