--- a/Bracez/ui/editor/EditorWindow.xib
+++ b/Bracez/ui/editor/EditorWindow.xib
@@ -790,17 +790,17 @@
                                                                                             <color key="fillColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                                                                         </box>
                                                                                         <scrollView borderType="none" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Het-PW-6a4">
-                                                                                            <rect key="frame" x="0.0" y="29" width="261" height="49"/>
+                                                                                            <rect key="frame" x="0.0" y="0.0" width="261" height="78"/>
                                                                                             <clipView key="contentView" drawsBackground="NO" id="9IZ-fS-urd">
-                                                                                                <rect key="frame" x="0.0" y="0.0" width="261" height="49"/>
-                                                                                                <autoresizingMask key="autoresizingMask"/>
+                                                                                                <rect key="frame" x="0.0" y="0.0" width="261" height="78"/>
+                                                                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                                                 <subviews>
                                                                                                     <textView importsGraphics="NO" richText="NO" verticallyResizable="YES" allowsCharacterPickerTouchBarItem="NO" textCompletion="NO" id="ULP-Sd-xav" customClass="SyntaxEditingField">
-                                                                                                        <rect key="frame" x="0.0" y="0.0" width="261" height="49"/>
+                                                                                                        <rect key="frame" x="0.0" y="0.0" width="261" height="78"/>
                                                                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                                                         <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                                                                                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                                                                                        <size key="minSize" width="261" height="49"/>
+                                                                                                        <size key="minSize" width="261" height="78"/>
                                                                                                         <size key="maxSize" width="261" height="10000000"/>
                                                                                                         <color key="insertionPointColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                                                                                         <connections>
@@ -819,7 +819,7 @@
                                                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                                             </scroller>
                                                                                             <scroller key="verticalScroller" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="BZJ-C3-8j1">
-                                                                                                <rect key="frame" x="245" y="0.0" width="16" height="49"/>
+                                                                                                <rect key="frame" x="245" y="0.0" width="16" height="78"/>
                                                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                                             </scroller>
                                                                                         </scrollView>
@@ -868,13 +868,13 @@
                                                                                         <rect key="frame" x="0.0" y="342" width="96" height="5"/>
                                                                                     </box>
                                                                                     <scrollView verticalHuggingPriority="249" borderType="none" autohidesScrollers="YES" horizontalLineScroll="40" horizontalPageScroll="10" verticalLineScroll="40" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x4a-44-eeN">
-                                                                                        <rect key="frame" x="0.0" y="98" width="240" height="246"/>
+                                                                                        <rect key="frame" x="0.0" y="0.0" width="240" height="344"/>
                                                                                         <clipView key="contentView" drawsBackground="NO" id="7L0-FR-TwL">
-                                                                                            <rect key="frame" x="0.0" y="0.0" width="240" height="246"/>
-                                                                                            <autoresizingMask key="autoresizingMask"/>
+                                                                                            <rect key="frame" x="0.0" y="0.0" width="240" height="344"/>
+                                                                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                                             <subviews>
                                                                                                 <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowHeight="40" viewBased="YES" id="S9U-TC-mCd">
-                                                                                                    <rect key="frame" x="0.0" y="0.0" width="240" height="246"/>
+                                                                                                    <rect key="frame" x="0.0" y="0.0" width="240" height="344"/>
                                                                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                                                     <size key="intercellSpacing" width="17" height="0.0"/>
                                                                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
